Continue experimenting with hints

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -91,7 +91,7 @@
             <input id="search-box" class="list-unstyled CTAs form-control" type="text" placeholder="Type a word here"
                    aria-label="Search"/>
             <li>
-                <a href="#" onclick="reset()" class="reset">Reset Graph</a>
+                <a href="#" onclick="reset()" class="reset" id="resetGraph">Reset Graph</a>
             </li>
 
         </ul>
