Add information icon to Reset Graph button

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -17,6 +17,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="js/intro.js/intro.js"></script>
     <link rel="stylesheet" href="js/intro.js/introjs.css">
+    <script src="https://kit.fontawesome.com/0599fddd3a.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -93,7 +94,9 @@
             <input id="search-box" class="list-unstyled CTAs form-control" type="text" placeholder="Type a word here"
                    aria-label="Search"/>
             <li>
-                <a href="#" onclick="reset()" class="reset" id="resetGraph">Reset Graph</a>
+                <a href="#" onclick="reset()" class="reset" id="resetGraph">Reset Graph
+                    <i class="fas fa-info-circle" style="color: gray; float: right"></i>
+                </a>
             </li>
 
         </ul>
